[tool.poetry]
name = "toloka"
version = "0.1.0"
description = ""
authors = ["Andrey Tatarinov <a@tatarinov.co>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
